# swandb

./: README.md  alembic.ini  pyproject.toml
chronosdb/: auth.py
chronosdb/db/: __init__.py  base.py  models.py
chronosdb/ingest/: __init__.py  service.py
chronosdb/offline/: __init__.py  events.py  features.py  layout.py  writer.py
chronosdb/online/: __init__.py  key_format.py  store.py
chronosdb/registry/: __init__.py  store.py
chronosdb/training/: __init__.py  build.py
chronosdb/transforms/: __init__.py  engine.py  interface.py  last_value.py  passthrough.py
chronosdb/validate/: parity.py
docs/: INGESTION.md  OFFLINE_ONLINE_PARITY.md  ONLINE_STORE.md  PIT_CORRECTNESS.md  REGISTRY.md  TRANSFORMS.md  getting-started.md
infra/: docker-compose.yml
migrations/: env.py
migrations/versions/: 001_initial_schema.py  002_add_transform_spec_spec_hash.py  003_ingestion_jobs_columns.py  004_materialization_jobs_columns.py  005_quality_results.py  006_feature_entity_keys.py
scripts/: benchmark_redis.py  run_parity.py  seed_features.py
services/: __init__.py
services/api/: __init__.py  auth.py  config.py  features.py  ingest.py  main.py  materialize.py  middleware.py  registry.py  schemas.py  training.py  validate.py
services/worker/: __init__.py  queue.py
swandb/: __init__.py  auth.py
tests/: __init__.py  conftest.py  test_auth.py  test_features_api.py  test_health.py  test_ingest.py  test_materialize_api.py  test_materialize_integration.py  test_online_store.py  test_registry.py  test_training_pit.py  test_transforms.py  test_validate_parity.py
(+21 files in other folders)
