[project]
name = "chronosdb"
version = "0.1.0"
description = "PIT-correct time-series feature store with offline/online parity"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "asyncpg>=0.30.0",
    "redis>=5.0",
    "structlog>=24.0",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.14",
    "psycopg[binary]>=3.0",
    "pyarrow>=18.0",
    "duckdb>=1.0",
]

[tool.poetry]
name = "chronosdb"
version = "0.1.0"
description = "PIT-correct time-series feature store with offline/online parity"
authors = []
readme = "README.md"
packages = [
    { include = "chronosdb" },
    { include = "services" },
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.32.0" }
pydantic = "^2.0"
pydantic-settings = "^2.0"
asyncpg = "^0.30.0"
redis = "^5.0"
structlog = "^24.0"
sqlalchemy = { extras = ["asyncio"], version = "^2.0" }
alembic = "^1.14"
psycopg = { extras = ["binary"], version = "^3.0" }

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.24.0"
httpx = "^0.28.0"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24.0", "httpx>=0.28.0"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
